apps/technitium/service-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium-tailscale
  namespace: technitium
  annotations:
    tailscale.com/hostname: technitium-dns
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: technitium
  ports:
    - port: 53
      targetPort: 53
      name: dns-udp
      protocol: UDP
    - port: 53
      targetPort: 53
      name: dns-tcp
      protocol: TCP
