apps/technitium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium
  namespace: technitium
spec:
  type: ClusterIP
  selector:
    app: technitium
  ports:
    - port: 5380
      targetPort: 5380
      name: web
    - port: 53
      targetPort: 53
      name: dns-udp
      protocol: UDP
    - port: 53
      targetPort: 53
      name: dns-tcp
      protocol: TCP
